--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+remote-theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-feed
 
